--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crafteos de mi Mod</title>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,79 +41,79 @@
     <h1>Crafteos de mi Mod</h1>
     <div class="gallery">
         <div class="image-card">
-            <img src="images/Crafteo1.png" alt="Crafteo 1">
+            <img src="./images/Crafteo1.png" alt="Crafteo 1">
             <p>Crafteo 1</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo2.png" alt="Crafteo 2">
+            <img src="./images/Crafteo2.png" alt="Crafteo 2">
             <p>Crafteo 2</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo3.png" alt="Crafteo 3">
+            <img src="./images/Crafteo3.png" alt="Crafteo 3">
             <p>Crafteo 3</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo4.png" alt="Crafteo 4">
+            <img src="./images/Crafteo4.png" alt="Crafteo 4">
             <p>Crafteo 4</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo5.png" alt="Crafteo 5">
+            <img src="./images/Crafteo5.png" alt="Crafteo 5">
             <p>Crafteo 5</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo6.png" alt="Crafteo 6">
+            <img src="./images/Crafteo6.png" alt="Crafteo 6">
             <p>Crafteo 6</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo7.png" alt="Crafteo 7">
+            <img src="./images/Crafteo7.png" alt="Crafteo 7">
             <p>Crafteo 7</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo8.png" alt="Crafteo 8">
+            <img src="./images/Crafteo8.png" alt="Crafteo 8">
             <p>Crafteo 8</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo9.png" alt="Crafteo 9">
+            <img src="./images/Crafteo9.png" alt="Crafteo 9">
             <p>Crafteo 9</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo10.png" alt="Crafteo 10">
+            <img src="./images/Crafteo10.png" alt="Crafteo 10">
             <p>Crafteo 10</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo11.png" alt="Crafteo 11">
+            <img src="./images/Crafteo11.png" alt="Crafteo 11">
             <p>Crafteo 11</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo12.png" alt="Crafteo 12">
+            <img src="./images/Crafteo12.png" alt="Crafteo 12">
             <p>Crafteo 12</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo13.png" alt="Crafteo 13">
+            <img src="./images/Crafteo13.png" alt="Crafteo 13">
             <p>Crafteo 13</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo14.png" alt="Crafteo 14">
+            <img src="./images/Crafteo14.png" alt="Crafteo 14">
             <p>Crafteo 14</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo15.png" alt="Crafteo 15">
+            <img src="./images/Crafteo15.png" alt="Crafteo 15">
             <p>Crafteo 15</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo16.png" alt="Crafteo 16">
+            <img src="./images/Crafteo16.png" alt="Crafteo 16">
             <p>Crafteo 16</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo17.png" alt="Crafteo 17">
+            <img src="./images/Crafteo17.png" alt="Crafteo 17">
             <p>Crafteo 17</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo18.png" alt="Crafteo 18">
+            <img src="./images/Crafteo18.png" alt="Crafteo 18">
             <p>Crafteo 18</p>
         </div>
         <div class="image-card">
-            <img src="images/Crafteo19.png" alt="Crafteo 19">
+            <img src="./images/Crafteo19.png" alt="Crafteo 19">
             <p>Crafteo 19</p>
         </div>
     </div>
